--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "cool bookmark sidebar for Chromium based browsers.",
   "private": true,
   "scripts": {
-    "build": "webpack --mode=production",
-    "serve": "webpack --mode=development -w"
+    "build": "webpack --env.NODE_ENV=production",
+    "serve": "webpack --env.NODE_ENV=development -w"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/register": "^7.6.0",
@@ -27,20 +29,26 @@
     "sass-loader": "^8.0.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8"
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-extension-manifest-plugin": "^0.5.0"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "fast-fuzzy": "^1.8.8",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.1"
   },
+  "browserslist": [
+    "chrome 75"
+  ],
   "babel": {
     "presets": [
       "@babel/preset-env"
     ],
     "plugins": [
-      [
-        "@babel/plugin-transform-runtime"
-      ]
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-proposal-optional-chaining",
+      "@babel/plugin-proposal-nullish-coalescing-operator"
     ]
   }
 }
