--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "fast-fuzzy": "^1.9.0",
-    "vue": "^2.6.10",
-    "vuex": "^3.1.2"
+    "vue": "^2.6.10"
   },
   "browserslist": [
     "chrome 75"
