--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "chrome-extension-async": "^3.4.1",
     "fast-fuzzy": "^1.9.2",
     "vue": "^2.6.11"
   },
