--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
     "@babel/runtime": "^7.9.2",
+    "@vue/compiler-sfc": "^3.0.0-beta.12",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -26,7 +27,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "vue-loader": "^15.9.1",
+    "vue-loader": "^16.0.0-beta.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
@@ -34,7 +35,7 @@
   "dependencies": {
     "chrome-extension-async": "^3.4.1",
     "fast-fuzzy": "^1.9.2",
-    "vue": "^2.6.11"
+    "vue": "^3.0.0-beta.12"
   },
   "browserslist": [
     "chrome 75"
