--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "@babel/runtime": "^7.9.6",
     "@vue/compiler-sfc": "^3.0.0-beta.12",
     "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
+    "fs-extra": "^9.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
