--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/register": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "@vue/compiler-sfc": "^3.0.0-beta.18",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
+    "@babel/runtime": "^7.11.2",
+    "@vue/compiler-sfc": "^3.0.0-rc.10",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^4.3.0",
     "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.11.1",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.1",
+    "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
-    "vue-loader": "^16.0.0-beta.4",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.43.0",
+    "vue-loader": "^16.0.0-beta.7",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "chrome-extension-async": "^3.4.1",
-    "fast-fuzzy": "^1.10.1",
-    "vue": "^3.0.0-beta.18"
+    "fast-fuzzy": "^1.10.7",
+    "vue": "^3.0.0-rc.10"
   },
   "browserslist": [
     "chrome 75"
