add favicon to newtab page fix typos update action icon switch logic

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
         "default": "Ctrl+Shift+Y",
         "mac": "Command+Shift+Y"
       },
-      "description": "toogle Bookmarkbar visibility"
+      "description": "toggle Bookmarkbar visibility"
     }
   },
   "background": {
