--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "@babel/runtime": "^7.11.2",
-    "@vue/compiler-sfc": "^3.0.0-rc.10",
+    "@vue/compiler-sfc": "^3.0.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.4.1",
-    "mini-css-extract-plugin": "^0.11.1",
+    "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "vue-loader": "^16.0.0-beta.7",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "fast-fuzzy": "^1.10.7",
-    "vue": "^3.0.0-rc.10"
+    "vue": "^3.0.0"
   },
   "browserslist": [
     "chrome 75"
