add image search option to new tab - show overlay when file gets dragged over newtab - show 4 options to search on - search on file drop

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,13 @@
   "default_locale": "de",
   "name": "__MSG_extensionName__",
   "description": "Bookmarkbar backend",
-  "permissions": ["storage", "activeTab", "bookmarks", "chrome://favicon/*/"],
+  "permissions": [
+    "storage",
+    "activeTab",
+    "bookmarks",
+    "chrome://favicon/*/",
+    "https://tineye.com/"
+  ],
   "content_security_policy": "img-src chrome://favicon/ data:;",
   "commands": {
     "toggle-bm-bar": {
