--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "cool bookmark sidebar for Chromium based browsers.",
   "private": true,
   "scripts": {
-    "build": "webpack --env.NODE_ENV=production",
-    "build:dev": "webpack --env.NODE_ENV=development",
-    "serve": "webpack --env.NODE_ENV=development -w"
+    "build": "webpack --env NODE_ENV=production",
+    "serve": "webpack --env NODE_ENV=development -w"
   },
   "author": "",
   "license": "ISC",
@@ -28,7 +27,7 @@
     "vue-loader": "^16.0.0-beta.9",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.3.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.1.0"
   },
   "dependencies": {
     "@vue-reactivity/watch": "^0.1.6",
