--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "cool bookmark sidebar for Chromium based browsers.",
   "private": true,
   "scripts": {
-    "build": "webpack --env NODE_ENV=production",
-    "serve": "webpack --env NODE_ENV=development -w"
+    "start": "webpack --env NODE_ENV=development -w",
+    "build": "webpack --env NODE_ENV=production"
   },
-  "author": "",
+  "author": "Lenny Anders",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -15,19 +15,19 @@
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
+    "@babel/runtime": "^7.12.5",
     "@vue/compiler-sfc": "^3.0.2",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.0",
+    "babel-loader": "^8.2.1",
+    "css-loader": "^5.0.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4",
-    "vue-loader": "^16.0.0-beta.9",
+    "sass-loader": "^10.1.0",
+    "vue-loader": "^16.0.0-rc.1",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@vue-reactivity/watch": "^0.1.6",
