--- a/package.json
+++ b/package.json
@@ -10,41 +10,22 @@
   "author": "Lenny Anders",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/register": "^7.12.1",
-    "@babel/runtime": "^7.12.5",
-    "@vue/compiler-sfc": "^3.0.2",
-    "babel-loader": "^8.2.1",
+    "@vue/compiler-sfc": "^3.0.3",
     "css-loader": "^5.0.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
-    "vue-loader": "^16.0.0-rc.1",
+    "vue-loader": "^16.1.0",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.4.0",
+    "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0"
   },
   "dependencies": {
     "@vue-reactivity/watch": "^0.1.6",
     "@vue/reactivity": "^3.0.2",
     "fast-fuzzy": "^1.10.8",
-    "vue": "^3.0.2"
-  },
-  "browserslist": [
-    "chrome 75"
-  ],
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-optional-chaining",
-      "@babel/plugin-proposal-nullish-coalescing-operator"
-    ]
+    "vue": "^3.0.3"
   }
 }
