switch from webpack to esbuild - waaay faster - way less depencies (more own code though)
other things:
- changed output folder structure
- changed src folder (src/bookmark-bar)

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,7 +20,7 @@
     }
   },
   "background": {
-    "scripts": ["background/main.js"],
+    "scripts": ["background.js"],
     "persistent": true
   },
   "browser_action": {
@@ -32,7 +32,7 @@
     "default_title": "Lesezeichen"
   },
   "chrome_url_overrides": {
-    "newtab": "newtab/index.html"
+    "newtab": "newtab.html"
   },
   "web_accessible_resources": ["fonts/*"],
   "manifest_version": 2
