--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "description": "cool bookmark sidebar for Chromium based browsers.",
   "private": true,
   "scripts": {
-    "start": "webpack --env NODE_ENV=development -w",
-    "build": "webpack --env NODE_ENV=production"
+    "start": "node -r esm scripts/serve.js",
+    "build": "node -r esm scripts/build.js"
   },
   "author": "Lenny Anders",
   "license": "ISC",
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
-    "css-loader": "^5.0.1",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "vue-loader": "^16.1.0",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.9.0",
-    "webpack-cli": "^4.2.0"
+    "esbuild": "^0.8.17",
+    "esm": "^3.2.25",
+    "node-watch": "^0.7.0",
+    "sass": "^1.29.0"
   },
   "dependencies": {
     "@vue-reactivity/watch": "^0.1.6",
     "@vue/reactivity": "^3.0.4",
     "fast-fuzzy": "^1.10.8",
     "vue": "^3.0.4"
+  },
+  "esm": {
+    "await": true
   }
 }
