--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Lenny Anders",
   "license": "ISC",
   "devDependencies": {
+    "@types/chrome": "0.0.126",
     "@vue/compiler-sfc": "^3.0.4",
     "esbuild": "^0.8.19",
     "esm": "^3.2.25",
