Use a recursive function instead of JSON.stringify

--- a/src/sidebar/jsconfig.json
+++ b/src/sidebar/jsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["esnext", "dom"],
     "baseUrl": ".",
     "paths": {
+      "@shared/*": ["../shared/*"],
       "@components/*": ["components/*"],
       "@store": ["store"],
       "@api": ["api"],
