Implement a component to add listeners to window

--- a/src/newtab/jsconfig.json
+++ b/src/newtab/jsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["esnext", "dom"],
     "baseUrl": ".",
     "paths": {
+      "@shared/*": ["../shared/*"],
       "@sidebar/*": ["../sidebar/*"],
       "@components/*": ["components/*"]
     }
