--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,13 +2,7 @@
   "default_locale": "en",
   "name": "__MSG_extensionName__",
   "description": "Bookmarkbar backend",
-  "permissions": [
-    "storage",
-    "activeTab",
-    "bookmarks",
-    "chrome://favicon/*/",
-    "https://tineye.com/"
-  ],
+  "permissions": ["storage", "activeTab", "bookmarks", "chrome://favicon/*/"],
   "content_security_policy": "img-src chrome://favicon/ data:;",
   "commands": {
     "toggle-bm-bar": {
