--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,12 @@
   "default_locale": "en",
   "name": "__MSG_extensionName__",
   "description": "__MSG_description__",
+  "icons": {
+    "16": "icons/extension-16.png",
+    "32": "icons/extension-32.png",
+    "48": "icons/extension-48.png",
+    "128": "icons/extension-128.png"
+  },
   "permissions": ["storage", "activeTab", "bookmarks", "chrome://favicon/*/"],
   "content_security_policy": "img-src chrome://favicon/ data:;",
   "commands": {
