add and use some dom utils

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": "./src",
     "paths": {
       "@chrome/*": ["./chrome/*"],
-      "@utils": ["./utils"]
+      "@utils": ["./utils"],
+      "@utils/*": ["./utils/*"]
     }
   }
 }
