--- a/src/background/jsconfig.json
+++ b/src/background/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@utils": ["../utils"],
+      "@utils/*": ["../utils/*"],
       "@chrome": ["../chrome"],
       "@chrome/*": ["../chrome/*"],
       "@shared/*": ["../shared/*"]
