make dom utils work based on env vars

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,9 @@
     "paths": {
       "@chrome/*": ["./chrome/*"],
       "@utils": ["./utils"],
-      "@utils/*": ["./utils/*"]
+      "@utils/*": ["./utils/*"],
+      "@background/*": ["./background/*"],
+      "@content/*": ["./content/*"]
     }
   }
 }
