use webextension-polyfill-ts instead of own

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
+    "lib": ["dom"],
     "baseUrl": "./src",
     "paths": {
-      "@chrome/*": ["./chrome/*"],
       "@utils": ["./utils"],
       "@utils/*": ["./utils/*"],
       "@background/*": ["./background/*"],
