--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node --experimental-json-modules --experimental-import-meta-resolve scripts/serve.js",
-    "build": "node --experimental-json-modules --experimental-import-meta-resolve scripts/build.js"
+    "build": "node --experimental-json-modules --experimental-import-meta-resolve scripts/build.js",
+    "release": "npm run build && node scripts/release.js"
   },
   "author": "Lenny Anders",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@types/node": "^16.11.6",
     "@types/sass": "^1.16.0",
     "@types/sortablejs": "^1.10.6",
+    "adm-zip": "^0.5.9",
     "esbuild": "^0.13.12",
     "node-watch": "^0.7.1",
     "sass": "^1.34.0"
